[package]
name = "gitify-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gitify_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "2.3"
dirs = "5.0"
image = "0.25"
tauri-plugin-log = "2"
log = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.x86_64-apple-darwin.dependencies]
cocoa = "0.26.1"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"

[target.aarch64-apple-darwin.dependencies]
cocoa = "0.26.1"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"

